# UnityNativePluginLoader

./: README.md
NativePlugin~/: CMakeLists.txt
NativePlugin~/Src/: Test.cpp
NativePlugin~/UnityInterface/: IUnityShaderCompilerAccess.h
Scripts/: NativePluginLoader.cs
Test/: NativePlugin.cs  New Scene.unity
UnityInterface~/: .clang-format  .gitignore  CMakeLists.txt
UnityInterface~/Src/: GetUnityInterface.cpp
